--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  publish:
+  integration_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
