#1 test configurable docker image version

--- a/.github/actions/dbt-action/action.yaml
+++ b/.github/actions/dbt-action/action.yaml
@@ -15,6 +15,10 @@ inputs:
     description: "dbt profile folder. Defaults to ."
     default: "."
     required: false
+  dbt_adapter:
+    description: "Specify dbt docker image name"
+    default: "dbt-snowflake:1.2.latest"
+    required: true
 outputs:
   result:
     description: "Success or failure of the dbt command"
@@ -25,6 +29,8 @@ runs:
     - ${{ inputs.dbt_command }}
     - ${{ inputs.dbt_project_folder }}
     - ${{ inputs.dbt_profile_dir }}
+  env:
+    DBT_ADAPTER: ${{ inputs.dbt_adapter }}
 branding:
   icon: 'database'  
   color: 'purple'
