--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -17,8 +17,8 @@ jobs:
         uses: ./.github/actions/dbt-action
         with:
           dbt_command: ./run_test.sh snowflake
+          dbt_adapter: dbt-snowflake:1.2.latest
         env:
-          DBT_ADAPTER: dbt-snowflake:1.2.latest
           DBT_SNOWFLAKE_TEST_ACCOUNT: ${{ secrets.DBT_SNOWFLAKE_TEST_ACCOUNT }}
           DBT_SNOWFLAKE_TEST_USER: ${{ secrets.DBT_SNOWFLAKE_TEST_USER }}
           DBT_ENV_SECRET_SNOWFLAKE_TEST_PASSWORD: ${{ secrets.DBT_ENV_SECRET_SNOWFLAKE_TEST_PASSWORD }}
