#1 test configurable docker image version

--- a/.github/actions/dbt-action/Dockerfile
+++ b/.github/actions/dbt-action/Dockerfile
@@ -1,4 +1,4 @@
-ARG DBT_ADAPTER=dbt-snowflake:1.2.latest
+ARG DBT_ADAPTER="dbt-snowflake:1.2.latest"
 FROM ghcr.io/dbt-labs/${DBT_ADAPTER}
 
 LABEL "maintainer"="Dat Nguyen <dat@infinitelambda.com>"
@@ -7,5 +7,6 @@ LABEL "com.github.actions.description"="Perform dbt package integration tests"
 LABEL "com.github.actions.icon"="dbt"
 LABEL "com.github.actions.color"="orange"
 
-COPY entrypoint.sh /entrypoint.sh
+ADD entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
