--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -6,12 +6,14 @@ on:
 
 jobs:
   integration_tests:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
+        registry:
+          - ghcr.io/dbt-labs/
         dbt_adapter:
           - dbt-snowflake:1.2.latest
           # - dbt-snowflake:1.3.latest
-    runs-on: ghcr.io/dbt-labs/${{ matrix.dbt_adapter }}
     steps:
       - uses: actions/checkout@v3
 
@@ -19,6 +21,7 @@ jobs:
         run: chmod +x run_test.sh
 
       - name: Run integration test
+        uses: ${{ matrix.registry }}${{ matrix.dbt_adapter }}
         run: ./run_test.sh snowflake
         env:
           DBT_SNOWFLAKE_TEST_ACCOUNT: ${{ secrets.DBT_SNOWFLAKE_TEST_ACCOUNT }}
