--- a/.github/actions/dbt-action/action.yaml
+++ b/.github/actions/dbt-action/action.yaml
@@ -15,6 +15,14 @@ inputs:
     description: dbt profile folder. Defaults to .
     default: .
     required: false
+  version:
+    description: dbt version
+    default: 1.3
+    required: true
+  adapter:
+    description: dbt adapter name
+    default: snowflake
+    required: true
 
 outputs:
   result:
@@ -27,6 +35,9 @@ runs:
     - ${{ inputs.dbt_command }}
     - ${{ inputs.dbt_project_folder }}
     - ${{ inputs.dbt_profile_dir }}
+  env:
+    DBT_ADAPTER: ${{ inputs.adapter }}
+    DBT_VERSION: ${{ inputs.version }}
 
 branding:
   icon: database
