--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -9,16 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        dbt_adapter:
-          - snowflake-1-2
-          - snowflake-1-3
+        adapter:
+          - snowflake
+        version:
+          - 1.2
     steps:
       - uses: actions/checkout@v3
 
       - name: Run integration test
-        uses: ./.github/actions/dbt-action-${{ matrix.dbt_adapter }}
+        uses: ./.github/actions/dbt-action
         with:
           dbt_command: ./run_test.sh snowflake
+          adapter: ${{ matrix.adapter }}
+          version: ${{ matrix.adapter }}
         env:
           DBT_SNOWFLAKE_TEST_ACCOUNT: ${{ secrets.DBT_SNOWFLAKE_TEST_ACCOUNT }}
           DBT_SNOWFLAKE_TEST_USER: ${{ secrets.DBT_SNOWFLAKE_TEST_USER }}
