--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -13,9 +13,8 @@ jobs:
           - snowflake
         version:
           - 1.2
-          - 1.3
     container:
-      image: ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest
+      image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
     steps:
       - uses: actions/checkout@v3
 
