--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -8,11 +8,10 @@ jobs:
   integration_tests:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       matrix:
-        adapter:
-          - snowflake
-        version:
-          - 1.2
+        adapter: ["snowflake"]
+        version: ["1.2","1.3"]
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
     steps:
