--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -10,15 +10,17 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        adapter: ["snowflake"]
+        adapter: ["snowflake"] #,"bigquery"
         version: ["1.2","1.3"]
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
     steps:
       - uses: actions/checkout@v3
-
       - name: Run integration test
-        run: chmod +x run_test.sh && ./run_test.sh ${{ matrix.adapter }}
+        run: |
+          chmod +x run_test.sh
+          cp -fr ./integration_tests/package-yml/packages_{{ matrix.version }}.yml ./integration_tests/packages.yml
+          ./run_test.sh ${{ matrix.adapter }}
         env:
           DBT_SNOWFLAKE_TEST_ACCOUNT: ${{ secrets.DBT_SNOWFLAKE_TEST_ACCOUNT }}
           DBT_SNOWFLAKE_TEST_USER: ${{ secrets.DBT_SNOWFLAKE_TEST_USER }}
