--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -5,13 +5,13 @@ on:
     branches: [ "main" ]
 
 jobs:
-  integration_tests_snowflake:
+  prometheus:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 1
       matrix:
         adapter: ["snowflake"]
-        version: ["1.0","1.1","1.2"] #,"1.3"
+        version: ["1.0"] #,"1.1","1.2"] #,"1.3"
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
     steps:
@@ -23,7 +23,6 @@ jobs:
           cp -fr ./integration_tests/packages_${{ matrix.version }}.yml ./integration_tests/packages.yml
           ./run_test.sh ${{ matrix.adapter }}
         env:
-          # SF
           DBT_SNOWFLAKE_TEST_ACCOUNT: ${{ secrets.DBT_SNOWFLAKE_TEST_ACCOUNT }}
           DBT_SNOWFLAKE_TEST_USER: ${{ secrets.DBT_SNOWFLAKE_TEST_USER }}
           DBT_ENV_SECRET_SNOWFLAKE_TEST_PASSWORD: ${{ secrets.DBT_ENV_SECRET_SNOWFLAKE_TEST_PASSWORD }}
@@ -31,13 +30,13 @@ jobs:
           DBT_SNOWFLAKE_TEST_DATABASE: ${{ secrets.DBT_SNOWFLAKE_TEST_DATABASE }}
           DBT_SNOWFLAKE_TEST_WAREHOUSE: ${{ secrets.DBT_SNOWFLAKE_TEST_WAREHOUSE }}
           
-  integration_tests_bigquery:
+  poseidon:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 1
       matrix:
         adapter: ["bigquery"]
-        version: ["1.0","1.1","1.2"] #,"1.3"
+        version: ["1.0"] #,"1.1","1.2"] #,"1.3"
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
     steps:
@@ -46,7 +45,7 @@ jobs:
       - name: Set up credentials
         run: echo $DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_JSON > /home/bigquery-service-key.json
         env:
-          DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_JSON: ${{ secrets.DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_PATH }}
+          DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_JSON: ${{ secrets.DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_JSON }}
 
       - name: Run integration test
         run: |
@@ -54,5 +53,5 @@ jobs:
           cp -fr ./integration_tests/packages_${{ matrix.version }}.yml ./integration_tests/packages.yml
           ./run_test.sh ${{ matrix.adapter }}
         env:
-          DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_PATH: "/home/bigquery-service-key.json"
+          DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_PATH: /home/bigquery-service-key.json
           DBT_BIGQUERY_TEST_DATABASE: ${{ secrets.DBT_BIGQUERY_TEST_DATABASE }}
