#1 Add commit sha

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -29,8 +29,10 @@ on-run-start:
   # Drop dq_issue_log table in the fresh run / Probably test won't drop the table
   - >
     {% if var('fresh', false) %}
-      {{ "create or replace schema " ~ target.schema }};
-      {{ "create or replace schema " ~ var("dbt_dq_tool_schema", target.schema) }};
+      {{ "drop schema if exists " ~ target.schema }};
+      {{ "create schema " ~ target.schema }};
+      {{ "drop schema if exists " ~ var("dbt_dq_tool_schema", target.schema) }};
+      {{ "create schema " ~ var("dbt_dq_tool_schema", target.schema) }};
     {% endif %}
 
 on-run-end:
