--- a/models/03_mart/metric/data_quality_score.yml
+++ b/models/03_mart/metric/data_quality_score.yml
@@ -1,8 +1,9 @@
 version: 2
 
-# Just a placeholder here as we cannot disable metrics along with models in dbt version < 1.3
 metrics:
   - name: data_quality_score
+    config:
+      enabled: false # disable by default because upstream models disabled too
     label: Data Quality Score
     model: ref('bi_dq_metrics')
     description: Data Quality Score based on the Testing Result which is calculaed by looking at Row Passed/Row Processed.
