--- a/.github/workflows/ci_integration_tests.yml
+++ b/.github/workflows/ci_integration_tests.yml
@@ -11,7 +11,7 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["snowflake"]
-        version: ["1.3","1.4"] #["1.0","1.1","1.2"]
+        version: ["1.3"] #"1.4" doesn't have latest tag yet
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
     steps:
@@ -37,7 +37,7 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["bigquery"]
-        version: ["1.3","1.4"] #["1.0","1.1","1.2"]
+        version: ["1.3"] #"1.4" doesn't have latest tag yet
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
     steps:
