--- a/models/03_mart/metric/data_quality_score.yml
+++ b/models/03_mart/metric/data_quality_score.yml
@@ -1,14 +1,15 @@
 version: 2
 
-# Just a placeholder here as we cannot disable metrics along with models in dbt version < 1.3
 metrics:
   - name: data_quality_score
+    config:
+      enabled: false # disable by default because upstream models disabled too
     label: Data Quality Score
     model: ref('bi_dq_metrics')
     description: Data Quality Score based on the Testing Result which is calculaed by looking at Row Passed/Row Processed.
 
-    type: average
-    sql: (rows_processed - rows_failed) * 1.00 / (rows_processed)
+    calculation_method: average
+    expression: (rows_processed - rows_failed) * 1.00 / (rows_processed)
 
     timestamp: run_time
     time_grains: [day, week, month, quarter, year]
