--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -11,9 +11,9 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["snowflake"]
-        version: ["1.3"] #"1.4" doesn't have latest tag yet
+        version: ["1.3.0"] #"1.4.1", "1.5.2"
     container:
-      image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
+      image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
       - uses: actions/checkout@v3
 
@@ -37,9 +37,9 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["bigquery"]
-        version: ["1.3"] #"1.4" doesn't have latest tag yet
+        version: ["1.3.0"] #"1.4.1", "1.5.3"
     container:
-      image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}.latest"
+      image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
       - uses: actions/checkout@v3
 
