#6 fix dbt version in pr pipeline

--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Run integration test
         run: |
           chmod +x run_test.sh
-          cp -fr ./integration_tests/packages_${{ matrix.version }}.yml ./integration_tests/packages.yml
+          dbtversion=${{ matrix.version }}
+          cp -fr ./integration_tests/packages_${dbtversion%.*}.yml ./integration_tests/packages.yml
           ./run_test.sh ${{ matrix.adapter }}
         env:
           DBT_SNOWFLAKE_TEST_ACCOUNT: ${{ secrets.DBT_SNOWFLAKE_TEST_ACCOUNT }}
@@ -52,7 +53,8 @@ jobs:
       - name: Run integration test
         run: |
           chmod +x run_test.sh
-          cp -fr ./integration_tests/packages_${{ matrix.version }}.yml ./integration_tests/packages.yml
+          dbtversion=${{ matrix.version }}
+          cp -fr ./integration_tests/packages_${dbtversion%.*}.yml ./integration_tests/packages.yml
           ./run_test.sh ${{ matrix.adapter }}
         env:
           DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_PATH: /opt/bigquery_service_key.json
