#6 fix dbt_dq_tool_database missing deafult

--- a/integration_tests/models/source_dq_tools_test.yml
+++ b/integration_tests/models/source_dq_tools_test.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: dq_tools_test
-    database: "{{ var('dbt_dq_tool_database') }}"
+    database: "{{ var('dbt_dq_tool_database', target.database) }}"
     schema: "{{ var('dbt_dq_tool_schema') }}"
     tables:
       - name: dq_issue_log
