Feature/#6 database config (#7)
* Add dbt_dq_tool_database variable

* #6 Move tests of log table to integration tests

* #6 fix dbt version in pr pipeline

* #6 fix hook error

* #6 update test script and add security

* #6 update config for test

* #6 comment in dbt_dq_tool_database for test

* #6 fix dbt_dq_tool_database missing deafult

* #6 extend test to other dbt versions

* # isolate schema for PR with dbt version

* #6 fix DBT_SCHEMA in pr ci pipeline

---------

Co-authored-by: Dat Nguyen <dat@infinitelambda>

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -31,8 +31,8 @@ on-run-start:
     {% if var('fresh', false) %}
       {{ "drop schema if exists " ~ target.schema }};
       {{ "create schema " ~ target.schema }};
-      {{ "drop schema if exists " ~ var("dbt_dq_tool_schema", target.schema) }};
-      {{ "create schema " ~ var("dbt_dq_tool_schema", target.schema) }};
+      {{ "drop schema if exists " ~ var("dbt_dq_tool_database", target.database) ~ "." ~ var("dbt_dq_tool_schema", target.schema) }};
+      {{ "create schema "  ~ var("dbt_dq_tool_database", target.database) ~ "."  ~ var("dbt_dq_tool_schema", target.schema) }};
     {% endif %}
 
 on-run-end:
@@ -40,6 +40,7 @@ on-run-end:
 
 vars:
   dbt_dq_tool_schema: dq_raw
+  # dbt_dq_tool_database: dq_tools
 
 seeds:
   dq_tools_integration_tests:
