--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -11,7 +11,7 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["snowflake"]
-        version: ["1.3.0"] #"1.4.1", "1.5.2"
+        version: ["1.3.0", "1.4.1", "1.5.2"]
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
@@ -20,7 +20,8 @@ jobs:
       - name: Run integration test
         run: |
           chmod +x run_test.sh
-          cp -fr ./integration_tests/packages_${{ matrix.version }}.yml ./integration_tests/packages.yml
+          dbtversion=${{ matrix.version }}
+          cp -fr ./integration_tests/packages_${dbtversion%.*}.yml ./integration_tests/packages.yml
           ./run_test.sh ${{ matrix.adapter }}
         env:
           DBT_SNOWFLAKE_TEST_ACCOUNT: ${{ secrets.DBT_SNOWFLAKE_TEST_ACCOUNT }}
@@ -29,7 +30,7 @@ jobs:
           DBT_SNOWFLAKE_TEST_ROLE: ${{ secrets.DBT_SNOWFLAKE_TEST_ROLE }}
           DBT_SNOWFLAKE_TEST_DATABASE: ${{ secrets.DBT_SNOWFLAKE_TEST_DATABASE }}
           DBT_SNOWFLAKE_TEST_WAREHOUSE: ${{ secrets.DBT_SNOWFLAKE_TEST_WAREHOUSE }}
-          DBT_SCHEMA: PRCI_${{ github.sha }}
+          DBT_SCHEMA: PRCI_${{ matrix.version }}_${{ github.sha }}
           
   poseidon:
     runs-on: ubuntu-latest
@@ -37,7 +38,7 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["bigquery"]
-        version: ["1.3.0"] #"1.4.1", "1.5.3"
+        version: ["1.3.0", "1.4.1", "1.5.3"]
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
@@ -52,9 +53,10 @@ jobs:
       - name: Run integration test
         run: |
           chmod +x run_test.sh
-          cp -fr ./integration_tests/packages_${{ matrix.version }}.yml ./integration_tests/packages.yml
+          dbtversion=${{ matrix.version }}
+          cp -fr ./integration_tests/packages_${dbtversion%.*}.yml ./integration_tests/packages.yml
           ./run_test.sh ${{ matrix.adapter }}
         env:
           DBT_ENV_SECRET_BIGQUERY_SERVICE_KEY_PATH: /opt/bigquery_service_key.json
           DBT_BIGQUERY_TEST_DATABASE: ${{ secrets.DBT_BIGQUERY_TEST_DATABASE }}
-          DBT_SCHEMA: PRCI_${{ github.sha }}
+          DBT_SCHEMA: PRCI_DQTOOLS_${{ matrix.version }}_${{ github.sha }}
