--- a/integration_tests/models/source_dq_tools_test.yml
+++ b/integration_tests/models/source_dq_tools_test.yml
@@ -61,6 +61,13 @@ sources:
               - dq_tools.expression_is_true_db:
                   where: coalesce(ref_table,'') != ''
                   expression: no_of_records >= 0
+          - name: no_of_records_scanned
+            tests:
+              - dq_tools.not_null_where_db:
+                  where: coalesce(table_name,'') != ''
+              - dq_tools.expression_is_true_db:
+                  where: coalesce(ref_table,'') != ''
+                  expression: no_of_records >= 0
           - name: no_of_records_failed
             tests:
               - dq_tools.not_null_where_db
@@ -69,3 +76,6 @@ sources:
               - dq_tools.expression_is_true_db:
                   where: lower(dq_model) like '%failure%'
                   expression: no_of_records_failed > 0
+          - name: test_unique_id
+            tests:
+              - dq_tools.not_null_where_db
