--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -11,7 +11,7 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["snowflake"]
-        version: ["1.3.0", "1.4.1", "1.5.2"]
+        version: ["1.6.1"]
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
@@ -38,7 +38,7 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["bigquery"]
-        version: ["1.3.0", "1.4.1", "1.5.3"]
+        version: ["1.6.3"]
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
