--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,15 @@ authors = ["IL <dat@infinitelambda.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-dbt-core = "~1.4.0"
-dbt-snowflake = "~1.4.0"
-# dbt-bigquery = "~1.4.0"
-pre-commit = "^2.17.0"
+dbt-core = "~1.6.0"
+dbt-snowflake = "~1.6.0"
+dbt-metricflow = {extras = ["snowflake"], version = "~1.6.0"}
+# dbt-bigquery = "~1.6.0"
+# dbt-metricflow = {extras = ["bigquery"], version = "~1.6.0"}
 
 [tool.poetry.dev-dependencies]
 poethepoet = "^0.12.3"
+pre-commit = "^2.17.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
