--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install additional deps
+        run: |
+          pip install "dbt-metricflow[${{ matrix.adapter }}]"
+
       - name: Run integration test
         run: |
           chmod +x run_test.sh
@@ -43,6 +47,10 @@ jobs:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install additional deps
+        run: |
+          pip install "dbt-metricflow[${{ matrix.adapter }}]"
 
       - name: Set up credentials
         run: |
