fix: optimize metricflow_time_spine

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -14,3 +14,7 @@ vars:
   # dbt_dq_tool_schema: dq_raw
   # dbt_dq_tool_database: dq_tools
   # dq_tools_enable_store_test_results: true
+
+  # for metricflow
+  # dbt_dq_tool_start_date
+  # dbt_dq_tool_end_date
